# code

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
IDEs/pycharm/: README.md  installation-community-version.bash  installation-dataspell.bash  installation-professional-version-with-student-licence.bash  installation.bash
R/: README.md  installation.bash  logs.md  rstudio-installation.bash
codespaces/: README.md  demo.ipynb  demo.py  demoVE.yml  log.md
conda/: README.md  download-install-miniconda.bash  download-install.bash  download-install.sh
copilot/: README.md
datoviz/: README.md
docker/: README.md  install-docker.bash  logs.md
github-tools/: README.md
gpu/: README.md
gym/: README.md
imgaug/: README.md
jupyter/: README.md
llms/: README.md
machine/: README.md
mamba/: README.md
monai/: README.md
opencv/: README.md
opencv/examples/cpp/Multithread-Camera-OpenCV/: CMakeLists.txt  README.md  app
opencv/examples/cpp/Multithread-Camera-OpenCV/include/: ThreadCam.h
opencv/examples/cpp/Multithread-Camera-OpenCV/src/: ThreadCam.cpp  main.cpp
opencv/examples/cpp/multi-threaded-video-compression/: CMakeLists.txt  README.md  app  build.bash
opencv/examples/cpp/multi-threaded-video-compression/src/: video.cpp
opencv/examples/cpp/videowriter_basic/: CMakeLists.txt  README.md  conf_build
opencv/examples/cpp/videowriter_basic/src/: main.cpp
pyVEs/: aiVE.yml  bareVE.yml  codeVE.yml  eVE.yml  packages_versions.py  simpleVE.yml
pycharm/: README.md
pyside6/: README.md
pytest/: README.md
python/: README.md
pytorch/: README.md  pyproject.toml
tensorboard/: README.md
tensorflow/: ISSUES.md  README.md
uv/: README.md
vtk/: README.md
(+658 files in other folders)
